--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="new-task-description" name="newTaskDescription" placeholder="description">
+      <label for="taskPriority">Priority:</label>
+      <select id="taskPriority" name="taskPriority">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low" selected>Low</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
